# Ros-2-simulated-robot.

./: CMakeLists.txt  README.md
description/: gazebo_controller.xacro  lidar_sensor.xacro  robot.urdf.xacro  robot.xacro
install/robot/share/ament_index/resource_index/parent_prefix_path/: robot
launch/: gazebo.launch.py  navigation.launch.py  robot.launch.py  show.robot.launch.py
params/: mapper_params_online_async.yaml  nav2.yaml
src/drive_robot/: setup.py
src/project/: CMakeLists.txt
src/project/install/: setup.sh
src/project/log/: latest_build
src/visual_marker/install/: setup.sh
src/visual_marker/log/: latest_build
src/visual_marker/src/: visual.cpp  visual.hpp
src/visual_marker_obstacle_detector/: CMakeLists.txt  package.xml
src/visual_marker_obstacle_detector/install/: local_setup.sh  setup.sh
src/visual_marker_obstacle_detector/install/visual_marker_obstacle_detector/share/visual_marker_obstacle_detector/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/visual_marker_obstacle_detector/install/visual_marker_obstacle_detector/share/visual_marker_obstacle_detector/cmake/: visual_marker_obstacle_detectorConfig.cmake
src/visual_marker_obstacle_detector/log/: latest_build
src/visual_marker_obstacle_detector/src/: visual_marker.cpp  visual_marker.hpp
